--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       context: ./client
       dockerfile: Dockerfile.dev
     command: npm start
+    environment:
+      - REACT_APP_API_URL
     ports:
       - 3001:3000
     volumes:
