--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,7 +1,9 @@
-FROM node:14-buster-slim
+FROM node:14-alpine
+# FROM node:15.13.0-alpine3.13
 
 WORKDIR /usr/src/app
 
 COPY ["package.json", "/usr/src/app"]
 
+EXPOSE 3000
 RUN npm install
